<?xml version="1.0" encoding="utf-8"?>
<!--
Puesto por JFA para que NO genere Clase de Vista con Binding:
tools:viewBindingIgnore="true"
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">



    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/gray1" />

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvTagUii"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="0"
            android:textColor="@color/red1"
            android:textSize="16sp"
            android:textStyle="bold" />
<!--
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="0"
            android:textColor="@color/red1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvTagLen"
            android:visibility="gone" />
-->
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tvAtencion"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tvTagCount"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tvContEPC"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray1" />

    <ListView
        android:id="@+id/LvTags"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>