<?xml version="1.0" encoding="utf-8"?>
<!--
Puesto por JFA para que NO genere Clase de Vista con Binding:
tools:viewBindingIgnore="true"
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">



    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray1" />

    <LinearLayout
        android:id="@+id/layout12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/BtInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:textSize="30sp"
            android:text="@string/btInventory"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTagEtiquetas"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/red1"
                android:textSize="100sp"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTotalLecturas"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp" />
<!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvRepeLecturas"
                android:textAlignment="center"
                android:textSize="20sp" />
-->

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/gray1" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

        <Button
            android:id="@+id/BtClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/btClear"
            android:textColor="@color/white"
            android:textSize="18sp" />
<!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvTagEtiquetas"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="15sp"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"/>
-->
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:background="@color/gray1" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray1" />

</LinearLayout>