<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/logo_f4s"
            />
        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="txtTitulo"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15px"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray1" />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
        <TextView
            android:id="@+id/txtSubTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="txtSubTitulo"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="txtMsg"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:paddingLeft="10dp"/>
        <LinearLayout
            android:id="@+id/layoutEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="visible">>
            <TextView
                android:id="@+id/txtEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="txtEdit"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/edit_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:background="@drawable/rectangle_bg2"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15px"
        android:background="@color/gray1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/btSi"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/btNo"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>
    <!-- Fin bloque -->

